# DocuMind

./: .gitignore  README.md  pyproject.toml
app/agents/: prompts.py  study_agent.py
app/api/: routes.py
app/core/: embedder.py  init_app.py  llm.py  qdrant_utils.py  settings.py  state.py  vectorstore.py
app/ingestion/: loader.py  parser.py  pipeline.py
app/rag/: core.py  index.py  load_index.py  query_engine.py  retriever.py  tools.py
app/utils/: file_hash.py
ui/: streamlit_app.py
