[project]
name = "documind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "datasets>=2.18.0",
    "fastapi>=0.136.1",
    "fastembed>=0.2.7",
    "genanki>=0.13.1",
    "groq>=1.2.0",
    "httpx>=0.28.1",
    "llama-index>=0.14.16",
    "llama-index-embeddings-fastembed>=0.6.0",
    "llama-index-llms-groq>=0.5.0",
    "llama-index-llms-ollama>=0.10.1",
    "llama-index-vector-stores-qdrant>=0.8.8",
    "markdown>=3.10.2",
    "numpy<2",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "pymupdf4llm>=1.27.2.3",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "qdrant-client>=1.12.1",
    "ragas>=0.3.2",
    "requests>=2.33.1",
    "streamlit>=1.57.0",
    "unstructured[pdf]>=0.18.32",
    "uvicorn[standard]>=0.46.0",
]
